now students page is responsive

--- a/student.html
+++ b/student.html
@@ -11,7 +11,7 @@
 <body>
 <main class="container-fluid bg-gray">
     <div class="row">
-        <div class="toggle col-2 col-md-3 sidebar p-1 p-md-3">
+        <div class="toggle col-3 sidebar p-1 p-md-3">
             <h1 class="text-left border-start border-3 border-md-4 border-primary ps-md-2 fw-bold fs-4 mb-3 mb-md-0">E-classe</h1>
             <div class="w-100 px-md-5 mx-md-auto d-flex flex-column align-items-center mt-md-5 mb-md-2">
                 <img src="images/dashboard-round-img.png" alt="" class="img-round w-100 h-100 shadow">
@@ -92,48 +92,47 @@
                     <h1 class="h4 fw-bold">Students List</h1>
                     <div class="toolbar-left-part">
                         <button class="sort ic ic-sort btn btn-sort"></button>
-                        <button class="btn btn-primary fs-6">ADD NEW STUDENT</button>
+                        <button class="btn btn-primary btn-add-students">ADD NEW STUDENT</button>
                     </div>
                 </div>
-            </div>
-            <div class="table-header row mb-2">
-                <span class="offset-1 col-2 text-start">
-                    Name
-                </span>
-                <span class="col-2 text-start">
-                    Email
-                </span>
-                <span class="col-2 text-start">
-                    Phone
-                </span>
-                <span class="col-2 text-start">
-                    Enroll Number
-                </span>
-                <span class="col-3 text-start">
-                    Date of admission
-                </span>
-            </div>
-            <div class="col-12 cards">
+                <div class="table-header row mb-2 d-none d-lg-flex">
+                    <span class="offset-1 col-2 text-start">
+                        Name
+                    </span>
+                    <span class="col-2 text-start">
+                        Email
+                    </span>
+                    <span class="col-2 text-start">
+                        Phone
+                    </span>
+                    <span class="col-2 text-start">
+                        Enroll Number
+                    </span>
+                    <span class="col-3 text-start">
+                        Date of admission
+                    </span>
+                </div>
+                <div class="row col-12 cards">
                 <div class="col-12">
                     <div class="card shadow">
-                        <div class="card-body row">
-                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                            <span class="col-2 text-start">
+                        <div class="card-body row d-flex flex-column flex-md-row">
+                            <img src="images/student-img.jfif" alt="" class="card-image col-lg-1">
+                            <span class="col-lg-2 text-start">
                                 username
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 karthi@gmmail.com
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 7305477760
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 1234567305477760
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 08-Dec, 2021s
                             </span>
-                            <span class="col-1 btns">
+                            <span class="col-lg-1 btns">
                                 <button class="ic ic-edit btn btn-edit">
                                 </button>
                                 <button class="ic ic-delete btn btn-delete">
@@ -142,170 +141,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="card shadow">
-                        <div class="card-body row">
-                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                            <span class="col-2 text-start">
-                                username
-                            </span>
-                            <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                            <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                            <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                            <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                            <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div><div class="col-12">
-                <div class="card shadow">
-                    <div class="card-body row">
-                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                        <span class="col-2 text-start">
-                                username
-                            </span>
-                        <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                        <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                        <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                    </div>
-                </div>
-            </div><div class="col-12">
-                <div class="card shadow">
-                    <div class="card-body row">
-                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                        <span class="col-2 text-start">
-                                username
-                            </span>
-                        <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                        <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                        <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                    </div>
-                </div>
-            </div><div class="col-12">
-                <div class="card shadow">
-                    <div class="card-body row">
-                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                        <span class="col-2 text-start">
-                                username
-                            </span>
-                        <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                        <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                        <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                    </div>
-                </div>
-            </div><div class="col-12">
-                <div class="card shadow">
-                    <div class="card-body row">
-                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                        <span class="col-2 text-start">
-                                username
-                            </span>
-                        <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                        <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                        <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                        <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                    </div>
-                </div>
+
             </div>
-                <div class="col-12">
-                    <div class="card shadow">
-                        <div class="card-body row">
-                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
-                            <span class="col-2 text-start">
-                                username
-                            </span>
-                            <span class="col-2 text-start">
-                                karthi@gmmail.com
-                            </span>
-                            <span class="col-2 text-start">
-                                7305477760
-                            </span>
-                            <span class="col-2 text-start">
-                                1234567305477760
-                            </span>
-                            <span class="col-2 text-start">
-                                08-Dec, 2021s
-                            </span>
-                            <span class="col-1 btns">
-                                <button class="ic ic-edit btn btn-edit">
-                                </button>
-                                <button class="ic ic-delete btn btn-delete">
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
