the sidebar is almost ready

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -11,7 +11,7 @@
 <body>
 <main class="container-fluid">
     <div class="row">
-        <div class="toggle col-2 col-md-3 sidebar p-1 p-md-3">
+        <div class="toggle col-3 sidebar p-1 p-md-3">
             <h1 class="text-left border-start border-3 border-md-4 border-primary ps-md-2 fw-bold fs-4 mb-3 mb-md-0">E-classe</h1>
             <div class="w-100 px-md-5 mx-md-auto d-flex flex-column align-items-center mt-md-5 mb-md-2">
                 <img src="images/dashboard-round-img.png" alt="" class="img-round w-100 h-100 shadow">
@@ -65,7 +65,7 @@
             </div>
 
         </div>
-        <div class="col-9 content">
+        <div class="col content">
             <div class="row navigation-bar-top">
                 <nav class="col navbar navbar-expand d-flex justify-content-between">
                     <div class="navbar-brand">
@@ -87,7 +87,6 @@
                     </ul>
                 </nav>
             </div>
-
             <div class="main-content row p-2 d-flex align-items-center">
                 <article class="col-12 col-md-3 pb-1">
                     <div class="card">
@@ -99,7 +98,7 @@
                             <h2 class="card-title align-self-end h1">
                                 243
                             </h2>
-                            
+
                         </div>
 
                     </div>
