some tcouches in the dashboard to fix the icons

--- a/student.html
+++ b/student.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Students</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/student.css">
@@ -18,7 +17,7 @@
                 <h5 class="text-center w-100 mt-3 d-none d-md-block fw-bold">Admin name</h5>
                 <h6 class="text-primary text-bold mt-3 d-none d-md-block">Admin</h6>
             </div>
-            <div class="menu-options-con row w-100 px-lg-5 mx-auto py-md-5 py-2 mt-3 mt-md-0 ">
+            <div class="menu-options-con row w-100 px-xl-5 px-lg-2  mx-auto py-md-5 py-2 mt-3 mt-md-0">
                 <a href="Dashboard.html" class="btn gap-2 mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="bi bi-house w-25 w-xs-75 me-1 me-md-0"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
@@ -89,7 +88,7 @@
             </div>
             <div class="main-content row p-2 d-flex align-items-center">
                 <div class="col-12 main-content-toolbar d-flex pb-2 justify-content-between align-items-center border-bottom-light">
-                    <h1 class="h4 fw-bold">Students List</h1>
+                    <h1 class="h5 fw-bold">Students List</h1>
                     <div class="toolbar-left-part">
                         <button class="sort ic ic-sort btn btn-sort"></button>
                         <button class="btn btn-primary btn-add-students">ADD NEW STUDENT</button>
