some improvement in the sidebar

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -19,14 +19,14 @@
                 <h6 class="text-primary text-bold mt-3 d-none d-md-block">Admin</h6>
             </div>
             <div class="menu-options-con row w-100 px-lg-5 mx-auto py-md-5 py-2 mt-3 mt-md-0 ">
-                <a href="#" class="btn gap-2 bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="ic ic-home "></span>
+                <a href="Dashboard.html" class="btn gap-2 bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-home"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Home
                     </p>
                 </a>
                 <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="ic ic-course myicon"></span>
+                    <span class="ic ic-course"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                     Course
                     </p>
@@ -55,8 +55,8 @@
                         Settings
                     </p>
                 </a>
-                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center" >
-                    <p class="w-75 text-start m-0 d-none d-md-block ">
+                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-center align-items-center" >
+                    <p class=" text-start m-0 d-none d-md-block ">
                         Logout
                     </p>
                     <span class="ic ic-log-out my-1"></span>
@@ -88,7 +88,7 @@
                 </nav>
             </div>
             <div class="main-content row p-2 d-flex align-items-center">
-                <article class="col-12 col-md-3 pb-1">
+                <article class="col-12 col-md-6 col-lg-3 pb-1">
                     <div class="card">
                         <div class="card-body d-flex flex-column card-students">
                             <img src="images/ic-big-students.svg" alt="" class="card-image w-50">
@@ -102,9 +102,8 @@
                         </div>
 
                     </div>
-
                 </article>
-                <article class="col-12 col-md-3 pb-1">
+                <article class="col-12 col-md-6 col-lg-3 pb-1">
                     <div class="card">
                         <div class="card-body d-flex flex-column card-course">
                             <img src="images/ic-big-course.svg" alt="" class="card-image w-50">
@@ -120,7 +119,7 @@
                     </div>
 
                 </article>
-                <article class="col-12 col-md-3 pb-1">
+                <article class="col-12 col-md-6 col-lg-3 pb-1">
                     <div class="card">
                         <div class="card-body d-flex flex-column card-payments">
                             <img src="images/ic-big-payments.svg" alt="" class="card-image w-50">
@@ -136,7 +135,7 @@
                     </div>
 
                 </article>
-                <article class="col-12 col-md-3 pb-1">
+                <article class="col-12 col-md-6 col-lg-3 pb-1">
                     <div class="card">
                         <div class="card-body d-flex flex-column card-users">
                             <img src="images/ic-big-users.svg" alt="" class="card-image w-50">
