--- a/payments.html
+++ b/payments.html
@@ -11,7 +11,7 @@
 <body>
 <main class="container-fluid bg-gray">
     <div class="row">
-        <div class="toggle col-1 col-md-3 sidebar p-1 p-md-3">
+        <div class="toggle col-3 sidebar p-1 p-md-3">
             <h1 class="text-left border-start border-3 border-md-4 border-primary ps-md-2 fw-bold fs-3 fs-md-4 mb-3 mb-md-0">
                 E-classe</h1>
             <div class="w-100 px-md-5 mx-md-auto d-flex flex-column align-items-center mt-md-5 mb-md-2">
@@ -20,61 +20,54 @@
                 <h6 class="text-primary text-bold mt-3 d-none d-md-block">Admin</h6>
             </div>
             <div class="menu-options-con row w-100 px-lg-5 mx-auto py-md-5 py-2 mt-3 mt-md-0 ">
-                <a href="Dashboard.html"
-                   class="btn gap-2 mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi-house w-25 w-xs-75 me-1 me-md-0"></span>
+                <a href="Dashboard.html" class="btn gap-2 mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-home"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Home
                     </p>
                 </a>
-                <a href="#"
-                   class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi-bookmark w-25 me-2 me-md-0 "></span>
+                <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-course"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Course
                     </p>
                 </a>
-                <a href="student.html"
-                   class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi bi-mortarboard w-25 w-xs-75 me-1 me-2 me-md-0 ms-3 ms-md-0 me-md-1"
-                          style="transform:scaleX(-1);"></span>
+                <a href="student.html" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-students"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Students
                     </p>
                 </a>
-                <a href="payments.html"
-                   class="btn gap-2  bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                <a href="payments.html" class="btn gap-2 bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="ic ic-payment my-md-0 my-1"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Payment
                     </p>
                 </a>
-                <a href="#"
-                   class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="ic ic-report my-md-0 my-1"></span>
+                <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-report "></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Report
                     </p>
                 </a>
-                <a href="#"
-                   class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="ic ic-settings my-md-0 my-1"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Settings
                     </p>
                 </a>
-                <a href="login.html"
-                   class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center">
-                    <p class="w-75 text-start m-0 d-none d-md-block ">
+                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-center align-items-center" >
+                    <p class=" text-start m-0 d-none d-md-block ">
                         Logout
                     </p>
-                    <span class="ic ic-log-out ms-3 ps-3"></span>
+                    <span class="ic ic-log-out my-1"></span>
                 </a>
 
             </div>
 
+
         </div>
-        <div class="col-11 col-md-9 content">
+        <div class="col content">
             <div class="row navigation-bar-top bg-white">
                 <nav class="col navbar navbar-expand d-flex justify-content-between">
                     <div class="navbar-brand">
