--- a/student.html
+++ b/student.html
@@ -17,23 +17,23 @@
                 <h5 class="text-center w-100 mt-3 d-none d-md-block fw-bold">Admin name</h5>
                 <h6 class="text-primary text-bold mt-3 d-none d-md-block">Admin</h6>
             </div>
-            <div class="menu-options-con row w-100 px-xl-5 px-lg-2  mx-auto py-md-5 py-2 mt-3 mt-md-0">
-                <a href="Dashboard.html" class="btn gap-2 mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi-house w-25 w-xs-75 me-1 me-md-0"></span>
+            <div class="menu-options-con row w-100 px-lg-5 mx-auto py-md-5 py-2 mt-3 mt-md-0 ">
+                <a href="Dashboard.html" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-home"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Home
                     </p>
                 </a>
                 <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi-bookmark w-25 me-2 me-md-0 "></span>
+                    <span class="ic ic-course"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
-                    Course
+                        Course
                     </p>
                 </a>
-                <a href="student.html" class="btn gap-2  bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="bi bi bi-mortarboard w-25 w-xs-75 me-1 me-2 me-md-0 ms-3 ms-md-0 me-md-1" style="transform:scaleX(-1);"></span>
+                <a href="student.html" class="btn gap-2  mb-4 d-flex bg-primary justify-content-md-between justify-content-center w-100 align-items-center">
+                    <span class="ic ic-students"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
-                    Students
+                        Students
                     </p>
                 </a>
                 <a href="payments.html" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
@@ -43,7 +43,7 @@
                     </p>
                 </a>
                 <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
-                    <span class="ic ic-report my-md-0 my-1"></span>
+                    <span class="ic ic-report "></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Report
                     </p>
@@ -54,17 +54,17 @@
                         Settings
                     </p>
                 </a>
-                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center" >
-                    <p class="w-75 text-start m-0 d-none d-md-block ">
+                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-center align-items-center" >
+                    <p class=" text-start m-0 d-none d-md-block ">
                         Logout
                     </p>
-                    <span class="ic ic-log-out ms-3 ps-3"></span>
+                    <span class="ic ic-log-out my-1"></span>
                 </a>
 
             </div>
 
         </div>
-        <div class="col-9 content">
+        <div class="col content">
             <div class="row navigation-bar-top bg-white">
                 <nav class="col navbar navbar-expand d-flex justify-content-between">
                     <div class="navbar-brand">
