last touches in the payments page

--- a/payments.html
+++ b/payments.html
@@ -147,6 +147,90 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row d-flex flex-column flex-lg-row">
+                            <span class="col-lg-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-lg-2 text-start">
+                               First
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-lg-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row d-flex flex-column flex-lg-row">
+                            <span class="col-lg-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-lg-2 text-start">
+                               First
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-lg-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row d-flex flex-column flex-lg-row">
+                            <span class="col-lg-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-lg-2 text-start">
+                               First
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-lg-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-lg-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
